--- a/yoga-forever-backend/package.json
+++ b/yoga-forever-backend/package.json
@@ -4,7 +4,8 @@
   "description": "yoga for age 18-64",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "npm run build --prefix yoga-forever"
   },
   "author": "Sanchit",
   "license": "ISC",
