--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   yoga-react:
     image: yoga-react
     stdin_open: true
+    build: ./yoga-forever
     restart: always
     ports:
       - "3000:3000"
@@ -10,6 +11,7 @@ services:
       - mern-app
   yoga-api-server:
     image: yoga-api-server
+    build: ./yoga-forever-backend
     restart: always
     ports:
       - "8000:8000"
@@ -20,6 +22,8 @@ services:
   mongo:
     image: mongo:4.0.28-xenial
     restart: always
+    expose:
+      - "27017"
     ports:
       - "27017:27017"
     networks:
